calc.output
State 13 conflicts: 1 reduce/reduce


Grammar

    0 $accept: lines $end

    1 lines: /* empty */
    2      | lines '\n'
    3      | lines expression '\n'
    4      | error '\n'

    5 expression: formula
    6           | character
    7           | character '=' primary

    8 formula: term
    9        | formula '+' term
   10        | formula '-' term

   11 term: primary
   12     | term '*' primary
   13     | term '/' primary
   14     | term '%' primary

   15 primary: CONSTANT
   16        | character
   17        | '(' formula ')'

   18 character: CHARACTER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 4
'%' (37) 14
'(' (40) 17
')' (41) 17
'*' (42) 12
'+' (43) 9
'-' (45) 10
'/' (47) 13
'=' (61) 7
error (256) 4
CONSTANT (258) 15
CHARACTER (259) 18


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
lines (15)
    on left: 1 2 3 4, on right: 0 2 3
expression (16)
    on left: 5 6 7, on right: 3
formula (17)
    on left: 8 9 10, on right: 5 9 10 17
term (18)
    on left: 11 12 13 14, on right: 8 9 10 12 13 14
primary (19)
    on left: 15 16 17, on right: 7 11 12 13 14
character (20)
    on left: 18, on right: 6 7 16


state 0

    0 $accept: . lines $end

    error  shift, and go to state 1

    $end       reduce using rule 1 (lines)
    CONSTANT   reduce using rule 1 (lines)
    CHARACTER  reduce using rule 1 (lines)
    '('        reduce using rule 1 (lines)
    '\n'       reduce using rule 1 (lines)

    lines  go to state 2


state 1

    4 lines: error . '\n'

    '\n'  shift, and go to state 3


state 2

    0 $accept: lines . $end
    2 lines: lines . '\n'
    3      | lines . expression '\n'

    $end       shift, and go to state 4
    CONSTANT   shift, and go to state 5
    CHARACTER  shift, and go to state 6
    '('        shift, and go to state 7
    '\n'       shift, and go to state 8

    expression  go to state 9
    formula     go to state 10
    term        go to state 11
    primary     go to state 12
    character   go to state 13


state 3

    4 lines: error '\n' .

    $default  reduce using rule 4 (lines)


state 4

    0 $accept: lines $end .

    $default  accept


state 5

   15 primary: CONSTANT .

    $default  reduce using rule 15 (primary)


state 6

   18 character: CHARACTER .

    $default  reduce using rule 18 (character)


state 7

   17 primary: '(' . formula ')'

    CONSTANT   shift, and go to state 5
    CHARACTER  shift, and go to state 6
    '('        shift, and go to state 7

    formula    go to state 14
    term       go to state 11
    primary    go to state 12
    character  go to state 15


state 8

    2 lines: lines '\n' .

    $default  reduce using rule 2 (lines)


state 9

    3 lines: lines expression . '\n'

    '\n'  shift, and go to state 16


state 10

    5 expression: formula .
    9 formula: formula . '+' term
   10        | formula . '-' term

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18

    $default  reduce using rule 5 (expression)


state 11

    8 formula: term .
   12 term: term . '*' primary
   13     | term . '/' primary
   14     | term . '%' primary

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    '%'  shift, and go to state 21

    $default  reduce using rule 8 (formula)


state 12

   11 term: primary .

    $default  reduce using rule 11 (term)


state 13

    6 expression: character .
    7           | character . '=' primary
   16 primary: character .

    '='  shift, and go to state 22

    '\n'      reduce using rule 6 (expression)
    '\n'      [reduce using rule 16 (primary)]
    $default  reduce using rule 16 (primary)


state 14

    9 formula: formula . '+' term
   10        | formula . '-' term
   17 primary: '(' formula . ')'

    '+'  shift, and go to state 17
    ')'  shift, and go to state 23
    '-'  shift, and go to state 18


state 15

   16 primary: character .

    $default  reduce using rule 16 (primary)


state 16

    3 lines: lines expression '\n' .

    $default  reduce using rule 3 (lines)


state 17

    9 formula: formula '+' . term

    CONSTANT   shift, and go to state 5
    CHARACTER  shift, and go to state 6
    '('        shift, and go to state 7

    term       go to state 24
    primary    go to state 12
    character  go to state 15


state 18

   10 formula: formula '-' . term

    CONSTANT   shift, and go to state 5
    CHARACTER  shift, and go to state 6
    '('        shift, and go to state 7

    term       go to state 25
    primary    go to state 12
    character  go to state 15


state 19

   12 term: term '*' . primary

    CONSTANT   shift, and go to state 5
    CHARACTER  shift, and go to state 6
    '('        shift, and go to state 7

    primary    go to state 26
    character  go to state 15


state 20

   13 term: term '/' . primary

    CONSTANT   shift, and go to state 5
    CHARACTER  shift, and go to state 6
    '('        shift, and go to state 7

    primary    go to state 27
    character  go to state 15


state 21

   14 term: term '%' . primary

    CONSTANT   shift, and go to state 5
    CHARACTER  shift, and go to state 6
    '('        shift, and go to state 7

    primary    go to state 28
    character  go to state 15


state 22

    7 expression: character '=' . primary

    CONSTANT   shift, and go to state 5
    CHARACTER  shift, and go to state 6
    '('        shift, and go to state 7

    primary    go to state 29
    character  go to state 15


state 23

   17 primary: '(' formula ')' .

    $default  reduce using rule 17 (primary)


state 24

    9 formula: formula '+' term .
   12 term: term . '*' primary
   13     | term . '/' primary
   14     | term . '%' primary

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    '%'  shift, and go to state 21

    $default  reduce using rule 9 (formula)


state 25

   10 formula: formula '-' term .
   12 term: term . '*' primary
   13     | term . '/' primary
   14     | term . '%' primary

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    '%'  shift, and go to state 21

    $default  reduce using rule 10 (formula)


state 26

   12 term: term '*' primary .

    $default  reduce using rule 12 (term)


state 27

   13 term: term '/' primary .

    $default  reduce using rule 13 (term)


state 28

   14 term: term '%' primary .

    $default  reduce using rule 14 (term)


state 29

    7 expression: character '=' primary .

    $default  reduce using rule 7 (expression)
